--- a/main.html
+++ b/main.html
@@ -1,7 +1,11 @@
+
 <html>
   <head>
+    <meta charset="utf-8" />
+    <script src="transform.js"></script>
     <script src="bsp.js"></script>
     <script src="camera.js"></script>
+    <script src="phys.js"></script>
     <script src="main.js"></script>
   </head>
   <body onload="main()">
