bounding circle and ray collision
added bounding circles to phys bodies, not used yet
added bspTreeIntersect, which finds the first point along a segment
that enters a bspTree (can exit just fine)

--- a/main.html
+++ b/main.html
@@ -12,6 +12,9 @@
   </head>
   <body onload="main()">
     <canvas style="border-style: solid; border-color: black;" id="canvas" width="640" height="480"></canvas>
+    <br />
+    <button id="playpause">▶</button>
+    <button id="nextframe">▶|</button>
   <div id="log"/>
   </body>
 </html>
