--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
     <script src="solid.js"></script>
     <script src="camera.js"></script>
     <script src="phys.js"></script>
+    <script src="recorder.js"></script>
     <script src="main.js"></script>
   </head>
   <body onload="main()">
@@ -15,6 +16,8 @@
     <br />
     <button id="playpause">▶</button>
     <button id="nextframe">▶|</button>
-  <div id="log"/>
+    <button id="replay">replay</button>
+    <br />
+    <textarea id="log" rows="10" cols="80"></textarea>
   </body>
 </html>
