Fixed physics glitch!
We were incorrectly advancing body position if a collision occurred if
the separation velocity is positive. Also a rewrote collision detection
because I thought that was the cause, but keeping it because it’s
simpler.

--- a/main.html
+++ b/main.html
@@ -17,6 +17,14 @@
     <button id="playpause">▶</button>
     <button id="nextframe">▶|</button>
     <button id="replay">replay</button>
+    <div style="font-family: monospace;">
+      World: (<span id="worldx" class="width: 128px;"></span> px,
+      <span id="worldy" class="width: 128px;"></span> px)
+    </div>
+    <div style="font-family: monospace;">
+      Local: (<span id="localx" class="width: 128px;"></span> px,
+      <span id="localy" class="width: 128px;"></span> px)
+    </div>
     <br />
     <textarea id="log" rows="10" cols="80"></textarea>
   </body>
