--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
     <script src="solid.js"></script>
     <script src="camera.js"></script>
     <script src="phys.js"></script>
-    <script src="recorder.js"></script>
+    <script src="player.js"></script>
     <script src="main.js"></script>
   </head>
   <body onload="main()">
