--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
     <script src="camera.js"></script>
     <script src="phys.js"></script>
     <script src="player.js"></script>
+    <script src="recorder.js"></script>
     <script src="main.js"></script>
   </head>
   <body onload="main()">
@@ -17,6 +18,7 @@
     <button id="playpause">▶</button>
     <button id="nextframe">▶|</button>
     <button id="replay">replay</button>
+    <span>frame: <input id="frame" type="text" value="0" /></span>
     <div style="font-family: monospace;">
       World: (<span id="worldx" class="width: 128px;"></span> px,
       <span id="worldy" class="width: 128px;"></span> px)
@@ -25,7 +27,6 @@
       Local: (<span id="localx" class="width: 128px;"></span> px,
       <span id="localy" class="width: 128px;"></span> px)
     </div>
-    <br />
-    <textarea id="log" rows="10" cols="80"></textarea>
+    <textarea id="log" rows="10" cols="80">{"frame":0,"input":{"left":false,"right":false,"throttle":false,"fire":false}}</textarea>
   </body>
 </html>
