Start wrapping stuff in react elements

--- a/main.html
+++ b/main.html
@@ -4,22 +4,7 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    <canvas style="border-style: solid; border-color: black;" id="canvas" width="640" height="480"></canvas>
-    <br />
-    <button id="playpause">▶</button>
-    <button id="nextframe">▶|</button>
-    <button id="replay">replay</button>
-    <span>frame: <input id="frame" type="text" value="0" /></span>
-    <div style="font-family: monospace;">
-      World: (<span id="worldx" class="width: 128px;"></span> px,
-      <span id="worldy" class="width: 128px;"></span> px)
-    </div>
-    <div style="font-family: monospace;">
-      Local: (<span id="localx" class="width: 128px;"></span> px,
-      <span id="localy" class="width: 128px;"></span> px)
-    </div>
-    <textarea id="log" rows="8" cols="80">{"frame":0,"input":{"left":false,"right":false,"throttle":false,"fire":false}}</textarea>
-    <textarea id="flagged" rows="1" cols="80"></textarea>
+    <div id="reactroot"/>
   </body>
   <script src="bundle.js"></script>
 </html>
